Fix footer image positioning
Image was cut off on bigger screens (1080p+)

--- a/stylesheets/components/_footer.scss
+++ b/stylesheets/components/_footer.scss
@@ -1,6 +1,7 @@
 footer {
     // scss-lint:disable UrlFormat
     background-image: url('/*[[FOOTER_IMAGE_URL]]*/') !important;
+    background-position: top !important;
 
     ul {
         @extend %section;
